# terra

./: .gitignore  .travis.yml  Cargo.toml  README.md  clouds_combined.txt  file_list_GFC2019_datamask.txt  file_list_nasadem.txt  file_list_srtm3.txt  file_list_treecover.txt  rustfmt.toml  usgs_ned13.json
.github/workflows/: rust.yml
asset_cache/: Cargo.toml
asset_cache/src/: asset.rs  generated.rs  lib.rs  mmapped.rs  web.rs
assets/: clipmap.glsld  clipmap.glslf  clipmap.glslh  clipmap.glslv  generate_textures.glslf  generate_textures.glslv
examples/: graph.toml  preview.rs
freepbr.com/: README.md
generate/: Cargo.toml
generate/src/: download.rs  heightmap.rs  ktx2encode.rs  lib.rs  textures.rs
generate/src/sky/: lut.rs  mod.rs
planetcam/: Cargo.toml
planetcam/src/: lib.rs
preview/: Cargo.toml
preview/src/: main.rs
rshader/: Cargo.toml
rshader/src/: dynamic_shaders.rs  lib.rs  static_shaders.rs  wgsl.rs
screenshot/: Cargo.toml
screenshot/src/: main.rs
src/: array_contents.rs  asset.rs  astro.rs  billboards.rs  clipmap.rs  clouds.rs  compute.rs  compute_shader.rs  config.rs  coordinates.rs  download.rs  gpu_state.rs  heightmap.rs  lib.rs  load.rs  mapfile.rs  mesh_cache.rs  model.rs  plugin.rs  preview.rs  priority_cache.rs  runtime_texture.rs  speedtree_xml.rs  srgb.rs  stream.rs  tri.frag  tri.vert  upload.rs  vertex_buffer.rs
src/cache/: generators.rs  generators.rs.bk  layer.rs  mesh.rs  mod.rs  texture.rs  tile.rs
src/generate/: gpu.rs  heightmap.rs  ktx2encode.rs  material.rs  mod.rs  noise.rs  textures.rs
src/graph/: dataset.rs  description.rs  mod.rs
src/ocean/: mod.rs
src/offline/: mod.rs
src/shaders/: a.frag  a.vert  atmosphere  atmosphere.glsl  bounding-sphere.comp  bounding-tree-billboards.comp  cloudscape.frag  cloudscape.vert  cull-meshes.comp  declarations.glsl  declarations.wgsl  gen-aerial-perspective.comp  gen-bent-normals.comp  gen-displacements.comp  gen-grass-canopy.comp  gen-grass.comp  gen-grass.wgsl  gen-heightmaps.comp  gen-heights.comp  gen-inscattering.comp  gen-materials.comp  gen-normals.comp  gen-root-aerial-perspective.comp  gen-root-normals.comp  gen-skyview.comp  gen-terrain-bounding.comp  gen-transmittance.comp  gen-tree-attributes.comp  gen-tree-billboards.wgsl  grass.frag  grass.vert  hash  hash.glsl  model.frag  model.vert  pbr.glsl  reproject.comp  shadowpass.frag  sky.frag  sky.vert  (+9 more)
src/shaders/glsl/: atmosphere  bicubic  clipmap.glslf  clipmap.glslv  colormap.glslf  fractal  generate_textures.glslf  hash  heights.glslf  mesh.glslf  mesh.glslv  planet_mesh.glslf  planet_mesh.glslv  sky.glslf  sky.glslv  slopes.glslf  slopes.glslv  splatmap.glslf  splatmap.glslv  terrain.glslf  terrain.glslv  version
src/sky/: lut.rs  mod.rs  precompute.rs
src/terrain/: clipmap.rs  dem.rs  file.rs  heightmap.rs  landcover.rs  material.rs  mod.rs  quadtree.rs  raster.rs  reprojected_raster.rs  splat.rs  tile_cache.rs  treecover.rs  vertex_buffer.rs
src/terrain/clipmap/: mod.rs
src/terrain/quadtree/: id.rs  mod.rs  node.rs  render.rs
src/types/: mod.rs
src/utils/: math.rs
tilefmt/: Cargo.toml
tilefmt/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs  node.rs
