[package]
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
categories = ["game-engines", "rendering"]
description = "A rendering library for large scale terrains"
documentation = "https://docs.rs/terra"
edition = "2021"
homepage = "https://github.com/fintelia/terra"
license = "Apache-2.0"
name = "terra"
readme = "README.md"
repository = "https://github.com/fintelia/terra"
version = "0.3.0"
resolver = "2"

[[bin]]
name = "preview"
path = "bin/preview.rs"

[dependencies]
anyhow = "1.0.68"
astro = "2.0.0"
atomicwrites = "0.3.1"
bytemuck = { version = "1.12.3", features = ["extern_crate_alloc"] }
byteorder = "1.4.3"
cgmath = { version = "0.18.0", features = ["mint", "serde"] }
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
crossbeam = "0.8.2"
dirs = "4.0.0"
env_logger = "0.10.0"
fnv = "1.0.7"
futures = "0.3.25"
gilrs = "0.10.1"
hyper = { version = "0.14.23", features = ["http1"] }
hyper-tls = "0.5.0"
indicatif = {version = "0.17.2", optional = true }
ktx2 = "0.3.0"
lazy_static = "1.4.0"
lz4 = "1.24.0"
maplit = "1.0.2"
mint = "0.5.9"
num-traits = "0.2.15"
open-location-code = "0.1.0"
planetcam = { path = "planetcam" }
quick-xml = { version = "0.27.1", features = ["serialize"] }
rshader = { path = "rshader", features = ["dynamic_shaders"] }
serde = { version = "1.0.152", features = ["derive"] }
smaa = { version = "0.8.0", optional = true }
terra-generate = { path = "generate", optional = true }
tokio = { version = "1.24.1", features = ["fs", "macros", "sync", "rt", "rt-multi-thread", "io-util"] }
types = { path = "types" }
vec_map = { version = "0.8.2", features = ["serde"] }
wgpu = { version = "0.14.2", features = ["spirv"] }
winit = "0.27.5"
zip = { version = "0.6.3", features = ["deflate"], default-features = false }

[dev-dependencies]
approx = "0.5.1"

[features]
default = ["generate"]
generate = ["indicatif", "terra-generate"]
trace = ["wgpu/trace"]
small-trace = ["trace"]
soft-float64 = []

[profile]
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
incremental = true

[patch.crates-io]
naga = { git = "https://github.com/fintelia/naga", rev = "cd92101ef92ae73d2932fa8d1c7fb8779c9eb812" }
