[package]
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
categories = ["game-engines", "rendering"]
description = "A rendering library for large scale terrains"
documentation = "https://docs.rs/terra"
edition = "2021"
homepage = "https://github.com/fintelia/terra"
license = "Apache-2.0"
name = "terra"
readme = "README.md"
repository = "https://github.com/fintelia/terra"
version = "0.3.0"
resolver = "2"

[workspace]
members = ["generate", "planetcam", "preview", "rshader", "types"]
default-members = [".", "preview"]

[dependencies]
anyhow = "1.0.70"
atomicwrites = "0.4.0"
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"] }
cgmath = { version = "0.18.0", features = ["mint", "serde"], git = "https://github.com/rustgd/cgmath", rev = "d5e765db61cf9039cb625a789a59ddf6b6ab2337" }
crossbeam = "0.8.2"
dirs = "5.0.0"
fnv = "1.0.7"
futures = "0.3.27"
hyper = { version = "0.14.25", features = ["http1"] }
hyper-tls = "0.5.0"
ktx2 = "0.3.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
mint = "0.5.9"
num-traits = "0.2.15"
quick-xml = { version = "0.28.1", features = ["serialize"] }
rayon = "1.7.0"
rshader = { path = "rshader", features = ["dynamic_shaders"] }
serde = { version = "1.0.158", features = ["derive"] }
smaa = { version = "0.9.0", optional = true }
tokio = { version = "1.26.0", features = ["fs", "macros", "sync", "rt", "rt-multi-thread", "io-util"] }
terra-types = { path = "types" }
vec_map = { version = "0.8.2", features = ["serde"] }
wgpu = "0.15.1"
zip = { version = "0.6.4", features = ["deflate"], default-features = false }
zstd = "0.12.3"

[dev-dependencies]
approx = "0.5.1"

[features]
trace = ["wgpu/trace"]
small-trace = ["trace"]

[profile]
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
incremental = true

