[package]
name = "planetcam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", git = "https://github.com/rustgd/cgmath", rev = "d5e765db61cf9039cb625a789a59ddf6b6ab2337" }
geo = "0.29.3"
mint = "0.5.9"

[dev-dependencies]
approx = "0.5.1"
