[package]
name = "rshader"
version = "0.2.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
license = "Apache-2.0"
description = "A simply library for reloading shaders at runtime"
repository = "https://github.com/fintelia/terra"
homepage = "https://github.com/fintelia/terra"
categories = ["game-engines", "rendering"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
bytemuck = "1.7.0"
generic-array = "0.14.4"
lazy_static = "1.4.0"
naga = { version = "0.8.0", features = ["spv-in", "glsl-in", "wgsl-in"] }
#naga = { git = "https://github.com/gfx-rs/naga", rev = "323999f", features = ["spv-in", "glsl-in", "wgsl-in"] }
notify = "4.0.15"
sha2 = "0.9.1"
shaderc = "0.7.0"
spirv_headers = "1.4.2"
wgpu = { version = "0.12.0", features = ["spirv"] }

[features]
default = []
dynamic_shaders = []
