[package]
name = "rshader"
version = "0.2.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
license = "Apache-2.0"
description = "A simply library for reloading shaders at runtime"
repository = "https://github.com/fintelia/terra"
homepage = "https://github.com/fintelia/terra"
categories = ["game-engines", "rendering"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bytemuck = "1.12.3"
lazy_static = "1.4.0"
naga = { version = "0.10.0", features = ["spv-in", "glsl-in", "wgsl-in", "span"] }
notify = "5.0.0"
wgpu = { version = "0.14", features = ["spirv"] }

[features]
default = []
dynamic_shaders = []
