[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cgmath = { version = "0.18.0", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.158", features = ["derive"] }
